Replace icon-font with svg icons

--- a/elements/button.html
+++ b/elements/button.html
@@ -22,18 +22,80 @@ layout: page
 
 <div class="hr"></div><div class="br"></div>
 <h2>Icons</h2>
-<div class="br"></div>
+<h4>Icon in default button</h4>
 <p class="buttons">
-  <a class="button"><i class="icon ion-heart"></i></a>
-  <a class="button"><i class="icon ion-heart"></i> Button</a>
-  <a class="button icon-left"><i class="icon ion-heart"></i> Button</a>
-  <a class="button icon-right"><i class="icon ion-heart"></i> Button</a>
+  <a class="mini button"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
+  <a class="small button"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
+  <a class="button"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
+  <a class="big button"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
 </p>
+<p>
+  <a class="mini button"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="small button"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="button"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="big button"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+</p>
+
+<h4>Auto-width buttons</h4>
+<p class="buttons">
+  <a class="mini button auto-width"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
+  <a class="small button auto-width"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
+  <a class="button auto-width"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
+  <a class="big button auto-width"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
+  <a class="mini rounded button auto-width"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
+  <a class="small rounded button auto-width"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
+  <a class="button rounded auto-width"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
+  <a class="big rounded button auto-width"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
+</p>
+<h4>left-icon and right-icon buttons</h4>
+<p class="buttons">
+  <a class="mini button icon-left"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="small button icon-left"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="button icon-left"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="big button icon-left"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+</p>
+<p class="buttons">
+  <a class="mini button icon-right"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="small button icon-right"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="button icon-right"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="big button icon-right"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+</p>
+<p class="buttons">
+  <a class="mini rounded button icon-left"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="small rounded button icon-left"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="button rounded icon-left"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="big rounded button icon-left"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+</p>
+<p class="buttons">
+  <a class="red mini rounded button icon-right"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="green small rounded button icon-right"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="blue button rounded icon-right"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="gold big rounded button icon-right"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+</p>
+<h4>Borderless</h4>
+<p class="buttons">
+  <a class="mini borderless button icon-left"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="small borderless button icon-left"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="button borderless icon-left"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="big borderless button icon-left"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button</a>
+  <a class="mini button borderless auto-width"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
+  <a class="small button borderless auto-width"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
+  <a class="button borderless auto-width"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
+  <a class="big button borderless auto-width"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></a>
+</p>
+<div class="message">
+  <span>In order to set the icon color automaticaly, you must use <em>fill="currentColor"</em> and <em>stroke="currentColor"</em> for all svg paths in your icon files!</span>
+</div>
 <pre><code data-language="html">
-  <a class="button"><i class="icon ion-heart"></i></a>
-  <a class="button"><i class="icon ion-heart"></i> Button</a>
-  <a class="button icon-left"><i class="icon ion-heart"></i> Button</a>
-  <a class="button icon-right"><i class="icon ion-heart"></i> Button</a>
+  <a class="button">
+    <svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg>
+  </a>
+  <a class="button icon-left">
+    <svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button
+  </a>
+  <a class="button icon-right">
+    <svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg> Button
+  </a>
 
 </code></pre>
 <div class="br"></div>
@@ -45,14 +107,10 @@ layout: page
 <p class="buttons"><a class="button full-width">Full width</a></p>
 <p class="buttons">
   <a class="button auto-width">Auto width</a>
-  <a class="button auto-width"><i class="icon ion-heart"></i></a>
-  <a class="button square-width"><i class="icon ion-heart"></i></a>
 </p>
 <pre><code data-language="html">
   <a class="button full-width">Full width</a>
   <a class="button auto-width">Auto width</a>
-  <a class="button auto-width"><i class="icon ion-heart"></i></a>
-  <a class="button square-width"><i class="icon ion-heart"></i></a> (width=height)
 
 </code></pre>
 <div class="br"></div>
@@ -66,8 +124,6 @@ layout: page
   <a class="button full">Full</a>
   <a class="button borderless">Borderless</a>
   <a class="button borderless full">Borderless Full</a>
-  <a class="button rounded auto-width"><i class="icon ion-heart"></i></a>
-  <a class="button rounded square-width"><i class="icon ion-heart"></i></a>
   <a class="button static">Static</a>
 </p>
 <pre><code data-language="html">
@@ -75,8 +131,6 @@ layout: page
   <a class="button full">Full</a>
   <a class="button borderless">Borderless</a>
   <a class="button borderless full">Borderless Full</a>
-  <a class="button rounded auto-width"><i class="icon ion-heart"></i></a>
-  <a class="button rounded square-width"><i class="icon ion-heart"></i></a>
   <a class="button static">Static</a>
 
 </code></pre>
@@ -123,13 +177,11 @@ layout: page
 </p>
 <h5>Borderless</h5>
 <p class="buttons">
-  <a class="button borderless"><i class="icon ion-heart"></i></a>
   <a class="button full red-gradient borderless">Red gradient</a>
 </p>
 <pre><code data-language="html">
   <a class="button blue-dark2">Blue Dark 2</a>
   <a class="button full blue-dark2">Blue Dark 2</a>
-  <a class="button borderless"><i class="icon ion-heart"></i></a>
   <a class="button full red-gradient borderless">Red gradient</a>
 
 </code></pre>
