--- a/elements/form.html
+++ b/elements/form.html
@@ -248,7 +248,7 @@ layout: page
         <label for="input-54">Overlayed</label>
         <div class="overlayed inline field">
           <input type="text" id="input-54" />
-          <label for="input-54"><i class="icon ion-ios-search-strong"></i></label>
+          <label for="input-54"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg></label>
         </div>
       </div>
     </div>
@@ -258,7 +258,7 @@ layout: page
         <div class="overlayed inline field">
           <input type="text" id="input-55" />
           <button class="borderless square-width static grey">
-            <i class="icon ion-ios-search-strong"></i>
+            <svg class="mini icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg>
           </button>
         </div>
       </div>
@@ -269,7 +269,7 @@ layout: page
         <div class="overlayed inline field rounded">
           <input type="text" id="input-56" />
           <button class="rounded borderless square-width static grey">
-            <i class="icon ion-ios-search-strong"></i>
+            <svg class="mini icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg>
           </button>
         </div>
       </div>
@@ -310,7 +310,7 @@ layout: page
         <div class="overlayed inline field rounded">
           <input type="text" id="input-60" class="background-grey-light" />
           <button class="borderless static white square-width">
-            <i class="icon ion-ios-search-strong"></i>
+            <svg class="mini icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg>
           </button>
         </div>
       </div>
