--- a/global/sidebar.html
+++ b/global/sidebar.html
@@ -9,15 +9,17 @@ layout: page
   <div>
     <div class="container">Content</div>
   </div>
+  
 </code></pre>
 
 <h4>Fixable and Direction</h4>
 <p>Sidebars are fixeable, when you add the class <strong>.fixed</strong> and a direction (<strong>.top, .right, .bottom, .left</strong>), the sidebar will be fixed to the side of the window.</p>
 <p>On small devices, the sidebar will be hidden by default and shown 100% width, when a class <strong>.open</strong> is added.</p>
-<p class="basic grey message"><i class="icon ion-information-circled"></i> A fixed sidebar should always be placed <strong>before</strong> a content element in the DOM, because it will add margin to the next element.</p>
+<p class="basic grey message"><span>A fixed sidebar should always be placed <strong>before</strong> a content element in the DOM, because it will add margin to the next element.</span></p>
 <pre><code data-language="html">
   <div class="sidebar fixed left">Sidebar</div>
   <div>
     <div class="container">Content</div>
   </div>
+
 </code></pre>
