--- a/global/tabbar.html
+++ b/global/tabbar.html
@@ -7,9 +7,9 @@ title: Tabbar
 <body>
 <nav class="tabbar">
   <ol>
-    <li><a href="{{ site.baseurl }}/"><i class="icon ion-android-arrow-back"></i>Back</a></li>
-    <li class="active"><a href="#"><i class="icon ion-earth"></i>Tab 2</a></li>
-    <li><a href="#"><i class="icon ion-person"></i>Tab 3</a></li>
+    <li><a class="green" href="{{ site.baseurl }}/"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg>Back</a></li>
+    <li><a class="blue" href="#"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg>Tab 2</a></li>
+    <li><a class="red" href="#"><svg class="icon"><use xlink:href="/united-styles/icons/svg.svg#github" /></svg>Tab 3</a></li>
   </ol>
 </nav>
 
@@ -24,9 +24,27 @@ title: Tabbar
   <pre class="width-6"><code data-language="html">
 <nav class="tabbar">
   <ol>
-    <li><a><i class="icon"></i>Tab 1</a></li>
-    <li class="active"><a><i class="icon"></i>Tab 2</a></li>
-    <li><a><i class="icon"></i>Tab 3</a></li>
+    <li>
+      <a class="green" href="{{ site.baseurl }}/">
+        <svg class="icon">
+          <use xlink:href="/united-styles/icons/svg.svg#github" />
+        </svg>Back
+      </a>
+    </li>
+    <li>
+      <a class="blue" href="#">
+        <svg class="icon">
+          <use xlink:href="/united-styles/icons/svg.svg#github" />
+        </svg>Tab 2
+      </a>
+    </li>
+    <li>
+      <a class="red" href="#">
+        <svg class="icon">
+          <use xlink:href="/united-styles/icons/svg.svg#github" />
+        </svg>Tab 3
+      </a>
+    </li>
   </ol>
 </nav>
   </code></pre>
@@ -40,9 +58,27 @@ title: Tabbar
   <pre class="width-6"><code data-language="html">
 <nav class="tabbar fixed top">
   <ol>
-    <li><a><i class="icon"></i>Tab 1</a></li>
-    <li><a><i class="icon"></i>Tab 2</a></li>
-    <li><a><i class="icon"></i>Tab 3</a></li>
+    <li>
+      <a class="green" href="{{ site.baseurl }}/">
+        <svg class="icon">
+          <use xlink:href="/united-styles/icons/svg.svg#github" />
+        </svg>Back
+      </a>
+    </li>
+    <li>
+      <a class="blue" href="#">
+        <svg class="icon">
+          <use xlink:href="/united-styles/icons/svg.svg#github" />
+        </svg>Tab 2
+      </a>
+    </li>
+    <li>
+      <a class="red" href="#">
+        <svg class="icon">
+          <use xlink:href="/united-styles/icons/svg.svg#github" />
+        </svg>Tab 3
+      </a>
+    </li>
   </ol>
 </nav>
 <div class="tabbar-space"></div>
