- Add Gruntfile to automatically copy assets from united-styles dir. - Remove jquery + refactor sidebar opener

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Start
 <body>
 {% include menu.html init="closed" %}
 <div>
-  <a class="sidebar-toggler fixed top right" style="margin: 11px 6px;" href="#"><span>Toggle menu</span></a>
+  <a class="sidebar-toggler fixed top right" onClick="toggleSidebar();" style="margin: 11px 6px;"><span>Toggle menu</span></a>
   <section class="centered container">
 
     <div class="br"></div>
@@ -28,12 +28,12 @@ title: Start
     <div class="br"></div>
     <div class="br"></div>
     <div class="buttons">
-      <a class="big open-sidebar rounded borderless full red-gradient button">Documentation</a>
+      <a onClick="toggleSidebar();" class="big rounded borderless full red-gradient button">Documentation</a>
       <a class="big rounded button" href="https://github.com/franzwilding/united-styles">
         <svg class="icon"><use xlink:href="{{ site.baseurl }}/icons/svg.svg#github" /></svg> Github
       </a>
     </div>
-    <h6>Buildtime: {{ site.time | date: '%d. %B %Y' }} | Version: {{ site.version }}</h6>
+    <h6>{{ site.time | date: '%d. %B %Y' }} | Version: {{ site.version }}</h6>
 
 
     <!--p>United Styles is a minimalistic css (and soon js) framework for web and mobile apps.</p>
