- Finalize first table style implementation (+ .bordered style) - Small fixes on layout.html

--- a/elements/table.html
+++ b/elements/table.html
@@ -305,6 +305,31 @@ layout: page
       	<td>Leamington</td>
       	<td>Kyrgyzstan</td>
       </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <th class="centered" colspan="9">100 of 103435</th>
+      </tr>
+    </tfoot>
+  </table>
+</div>
+<h2>Bordered</h2>
+<div class="table-wrapper">
+  <table class="bordered">
+    <thead>
+      <tr>
+      	<th>Id</th>
+      	<th>Name</th>
+      	<th>Email</th>
+      	<th>Phone</th>
+      	<th>Company</th>
+      	<th>Address</th>
+      	<th>ZIP</th>
+      	<th>City</th>
+      	<th>Country</th>
+      </tr>
+    </thead>
+    <tbody>
       <tr>
       	<td>35</td>
       	<td>Rachel Melendez</td>
@@ -484,7 +509,7 @@ layout: page
       <tr>
       	<td>40</td>
       	<td>Lionel Ruiz</td>
-      	<td>placerat.eget.venenatis@SuspendisseduiFusce.org</td>
+      	<td>placerat.eget.venenatis@Fusce.org</td>
       	<td>250-7177</td>
       	<td>Lobortis Consulting</td>
       	<td>P.O. Box 494, 1162 Vel, Avenue</td>
@@ -803,7 +828,7 @@ layout: page
       <tr>
       	<td>32</td>
       	<td>Nathaniel P. Rodriquez</td>
-      	<td>nunc.ullamcorper@massaQuisqueporttitor.com</td>
+      	<td>nunc.ullamcorper@massaQuisqu.com</td>
       	<td>998-0758</td>
       	<td>Lorem Industries</td>
       	<td>2614 Nonummy Rd.</td>
@@ -1056,7 +1081,7 @@ layout: page
       <tr>
       	<td>54</td>
       	<td>Reuben G. Camacho</td>
-      	<td>imperdiet.non.vestibulum@lectusNullam.co.uk</td>
+      	<td>imperdiet.non.vestibulum@Nullam.co.uk</td>
       	<td>1-481-689-7519</td>
       	<td>Nulla Interdum Consulting</td>
       	<td>P.O. Box 140, 8824 At Avenue</td>
@@ -1128,3 +1153,24 @@ layout: page
   </table>
 </div>
 <p class="small grey basic message"><span>Data generated with <a href="http://www.generatedata.com/">www.generatedata.com</a></span></p>
+
+<h2>Scrolling wide tables is provided by table-wrapper</h2>
+<div class="table-wrapper">
+  <table class="bordered">
+    <tr>
+      <td class="no-wrap">This is a very long Cell. Since I added the <em>.no-wrap</em> class to the cell, it will not wrap</td>
+      <td class="no-wrap">This is a very long Cell. Since I added the <em>.no-wrap</em> class to the cell, it will not wrap</td>
+      <td class="no-wrap">This is a very long Cell. Since I added the <em>.no-wrap</em> class to the cell, it will not wrap</td>
+    </tr>
+    <tr>
+      <td class="no-wrap">This is a very long Cell. Since I added the <em>.no-wrap</em> class to the cell, it will not wrap</td>
+      <td class="no-wrap">This is a very long Cell. Since I added the <em>.no-wrap</em> class to the cell, it will not wrap</td>
+      <td class="no-wrap">This is a very long Cell. Since I added the <em>.no-wrap</em> class to the cell, it will not wrap</td>
+    </tr>
+    <tr>
+      <td class="no-wrap">This is a very long Cell. Since I added the <em>.no-wrap</em> class to the cell, it will not wrap</td>
+      <td class="no-wrap">This is a very long Cell. Since I added the <em>.no-wrap</em> class to the cell, it will not wrap</td>
+      <td class="no-wrap">This is a very long Cell. Since I added the <em>.no-wrap</em> class to the cell, it will not wrap</td>
+    </tr>
+  </table>
+</div>
