--- a/elements/layout.html
+++ b/elements/layout.html
@@ -25,27 +25,27 @@ layout: page
   </code></pre>
   <div class="width-4">
     <div class="row">
-      <div class="width-4"><div class="message">4</div></div>
-      <div class="width-4"><div class="message">4</div></div>
-      <div class="width-4"><div class="message">4</div></div>
+      <div class="width-4"><div class="centered box">4</div></div>
+      <div class="width-4"><div class="centered box">4</div></div>
+      <div class="width-4"><div class="centered box">4</div></div>
     </div>
     <div class="row">
-      <div class="width-3"><div class="message">3</div></div>
-      <div class="width-4"><div class="message">4</div></div>
-      <div class="width-5"><div class="message">5</div></div>
+      <div class="width-3"><div class="centered box">3</div></div>
+      <div class="width-4"><div class="centered box">4</div></div>
+      <div class="width-5"><div class="centered box">5</div></div>
     </div>
     <div class="row">
-      <div class="width-2"><div class="message">2</div></div>
-      <div class="width-4"><div class="message">4</div></div>
-      <div class="width-6"><div class="message">6</div></div>
+      <div class="width-2"><div class="centered box">2</div></div>
+      <div class="width-4"><div class="centered box">4</div></div>
+      <div class="width-6"><div class="centered box">6</div></div>
     </div>
     <div class="row">
-      <div class="width-1"><div class="message">1</div></div>
-      <div class="width-1"><div class="message">1</div></div>
-      <div class="width-1"><div class="message">1</div></div>
-      <div class="width-2"><div class="message">2</div></div>
-      <div class="width-3"><div class="message">3</div></div>
-      <div class="width-4"><div class="message">4</div></div>
+      <div class="width-1"><div class="centered box">1</div></div>
+      <div class="width-1"><div class="centered box">1</div></div>
+      <div class="width-1"><div class="centered box">1</div></div>
+      <div class="width-2"><div class="centered box">2</div></div>
+      <div class="width-3"><div class="centered box">3</div></div>
+      <div class="width-4"><div class="centered box">4</div></div>
     </div>
   </div>
 </div>
