refactor sidebar, add list module

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Start
     <div class="buttons">
       <a onClick="toggleSidebar();" class="big rounded borderless full red-gradient button">Documentation</a>
       <a class="big rounded button" href="https://github.com/franzwilding/united-styles">
-        <svg class="icon"><use xlink:href="{{ site.baseurl }}/icons/svg.svg#github" /></svg> Github
+        <svg class="icon"><use xlink:href="{{ site.baseurl }}/icons/icons.svg#github" /></svg> Github
       </a>
     </div>
     <h6>{{ site.time | date: '%d. %B %Y' }} | Version: {{ site.version }}</h6>
